[gd_scene load_steps=7 format=3 uid="uid://cjn48bl5mt2od"]

[ext_resource type="StyleBox" uid="uid://cx6fkhog11f3g" path="res://Resources/themes/roundedRect.tres" id="1_qgvbj"]
[ext_resource type="Script" path="res://Scripts/Dialogs/color_picker_dialog.gd" id="2_sf5xk"]
[ext_resource type="StyleBox" uid="uid://box0many71a4o" path="res://Resources/themes/dialogTitleBackground.tres" id="3_551kj"]
[ext_resource type="SystemFont" uid="uid://djnjdmtaghwta" path="res://Resources/themes/dialogTitle.tres" id="4_7ihtj"]
[ext_resource type="Texture2D" uid="uid://d1fyvq5kerbnb" path="res://Resources/themes/close_gadet.tres" id="5_o114o"]
[ext_resource type="SystemFont" uid="uid://b3xyn2xlnfoht" path="res://Resources/themes/dialogText.tres" id="6_foq3e"]

[node name="color_picker_dialog" type="Panel"]
process_mode = 3
custom_minimum_size = Vector2(210, 235)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -117.5
offset_right = 105.0
offset_bottom = 122.5
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
mouse_force_pass_scroll_events = false
theme_override_styles/panel = ExtResource("1_qgvbj")
script = ExtResource("2_sf5xk")
metadata/_edit_lock_ = true

[node name="dialogtitleBackground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 19.0
grow_horizontal = 2
theme_override_styles/panel = ExtResource("3_551kj")
metadata/_edit_lock_ = true

[node name="dialogTitle" type="Label" parent="dialogtitleBackground"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 3.0
offset_top = -1.0
offset_right = -36.0
offset_bottom = 16.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_7ihtj")
text = "Color Picker"
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="dialogCloseGadget" type="Button" parent="dialogtitleBackground"]
layout_mode = 0
offset_left = 189.0
offset_right = 609.0
offset_bottom = 408.0
scale = Vector2(0.035, 0.035)
focus_mode = 0
theme_override_icons/icon = ExtResource("5_o114o")
shortcut_feedback = false
shortcut_in_tooltip = false
text = "x
"
flat = true
metadata/_edit_lock_ = true

[node name="color_picker_rect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 30.0
offset_right = 205.0
offset_bottom = 230.0

[node name="colorDetailsLabel" type="Label" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("6_foq3e")
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="dialogtitleBackground/dialogCloseGadget" to="." method="dialog_cancelled"]
[connection signal="gui_input" from="color_picker_rect" to="." method="_on_color_picker_rect_gui_input"]
